# genomephone-frontend

./: .gitignore  .gitmodules  Containerfile  README.adoc  pyproject.toml
.github/workflows/: build-and-publish.yml
src/edgeql/: create_chunk.edgeql  create_project.edgeql  create_reference.edgeql  delete_project.edgeql  delete_reference.edgeql  get_done_projects.edgeql  get_new_projects.edgeql  set_project_result.edgeql  set_project_status.edgeql
src/genomephone/: __main__.py
src/genomephone/api/: projects.py
src/genomephone/executor/: finish.py  process.py
src/genomephone/util/: splitter.py
